updated list of taboo words

--- a/src/reynir_correct/config/TabooWords.conf
+++ b/src/reynir_correct/config/TabooWords.conf
@@ -5,53 +5,123 @@
 
 # This file is included in GreynirCorrect.conf
 
-pussa_kvk				píka_kvk					"Orðið er stundum notað yfir kynfæri kvenna og er óviðeigandi. \
- 													 Það er líka notað sem meiðyrði yfir konur."
-tussa_kvk				píka_kvk
-kunta_kvk				píka_kvk
-tilli_kk				limur_kk
-hommatittur_kk			hommi_kk
-faggi_kk				hommi_kk
-lessa_kvk				lesbía_kvk
-negri_kk				blökkumaður_kk				"Orðið er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
-													 fólki sem er dökkt á hörund."
-surtur_kk				blökkumaður_kk				"Orðið er gildishlaðið kynþáttaheiti sem er meiðandi gagnvart fólki sem \
-													 er dökkt á hörund."
-blámaður_kk			    blökkumaður_kk				"Orðið er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
-													 fólki sem er dökkt á hörund."
-afríkunegri_kk			blökkumaður_kk				"Orðið er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
- 													 fólki sem er dökkt á hörund."
-niggari					blökkumaður_kk				"Orðið er gildishlaðið kynþáttaheiti sem er meiðandi gagnvart fólki sem \
-													 er dökkt á hörund"
-svertingi				blökkumaður_kk				"Orðið er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
-													 fólki sem er dökkt á hörund."
-negríti					blökkumaður_kk				"Orðið er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
-													 fólki sem er dökkt á hörund."
-halanegri				blökkumaður_kk				"Orðið er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
-													 fólki sem er dökkt á hörund."
-júði_kk				    gyðingur_kk         		"Sá sem aðhyllist \
-                                           			gyðingdóm er 'gyðingur'."
-múhameðstrú_kvk			íslam_hk            		"Rétt heiti \
-                                           			 trúarbragðanna er 'íslam'."
-múhameðstrúarmaður_kk	múslími_kk          		"Sá sem aðhyllist íslam er 'múslími'."
+pussa_kvk				píka_kvk					"Orðið er stundum notað yfir kynfæri kvenna og er óviðeigandi.\
+													Það er líka notað sem meiðyrði yfir konur."
+
+tussa_kvk				píka_kvk					"Orðið er stundum notað yfir kynfæri kvenna og er óviðeigandi.\																												það er líka notað sem meiðyrði yfir konur."
+
+kunta_kvk				píka_kvk					"Orðið er stundum notað yfir kynfæri kvenna og er óviðeigandi.\																												Það er líka notað sem meiðyrði yfir konur."
+
+tippalingur_kk			limur_hk					"Orðið er notað yfir kynfæri karla og er lítillækkandi og meiðandi."
+
+typpalingur_kk			limur_hk					"Orðið er notað yfir kynfæri karla og er lítillækkandi og meiðandi."
+
+trukkalessa_kvk			lesbía_kvk					"Orðið 'trukkalessa' er meiðandi þar sem það byggir á ákveðinni staðalmynd \																								um útlit eða skapgerð samkynhneigðrar konu."
+
+negri_kk				blökkumaður_kk				"Orðið er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \																									fólki sem er dökkt á hörund."
+
+surtur_kk				blökkumaður_kk				"Orðið er gildishlaðið kynþáttaheiti sem er meiðandi gagnvart fólki sem \																									er dökkt á hörund."
+
+blámaður_kk			    blökkumaður_kk				"Orðið er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \																									fólki sem er dökkt á hörund."
+
+afríkunegri_kk			blökkumaður_kk				"Orðið er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \																									fólki sem er dökkt á hörund."
+
+niggari					blökkumaður_kk				"Orðið er gildishlaðið kynþáttaheiti sem er meiðandi gagnvart fólki sem \																									er dökkt á hörund"
+
+svertingi				blökkumaður_kk				"Orðið er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \																									fólki sem er dökkt á hörund."
+
+negríti					blökkumaður_kk				"Orðið er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \																									fólki sem er dökkt á hörund."
+
+halanegri				blökkumaður_kk				"Orðið er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \																									fólki sem er dökkt á hörund."
+
+júði_kk				    gyðingur_kk         		"Orðið 'júði' er úrelt og meiðandi yfir einstaklinga sem aðhyllast \																										gyðingdóm. Sá sem aðhyllist gyðingdóm kallast 'gyðingur'."
+
+múhameðstrú_kvk			íslam_hk            		"Ekki er rétt að nota orðið 'múhameðstrú ' yfir íslam þar sem Múhameð \																										er spámaður en ekki guð."
+
+múhameðstrúarmaður_kk	múslími_kk          		"Sá sem aðhyllist íslam er 'múslími '. Ekki er rétt að nota orðið \																											'múhameðstrúarmaður ' yfir fylgjendur íslam þar sem Múhameð er spámaður	en ekki guð. 
+
 afhomma_so                                  		"Sögnin 'afhomma' getur verið meiðandi \
                                            			 þar sem hún gefur í skyn að samkynhneigð sé \
                                            			 eiginleiki sem unnt og/eða æskilegt \
                                            			 sé að fjarlægja."
-hjúkka_kvk				hjúkrunafræðingur_kk		"Orðið 'hjúkka' þykir ýta undir kynjaðar staðalmyndir og gefur í skyn \	
-													 að aðeins konur sinni starfinu."
-hjúkrunarkona_kvk		hjúkrunarfræðingur_kk		"Orðið 'hjúkrunarkona' þykir ýta undir kynjaðar staðalmyndir og gefur í skyn \
- 													 að aðeins konur sinni starfinu."
-skúringakerling_kvk		ræstitæknir_kk				"Orðið 'skúringakerling' þykir ýta undir kynjaðar staðalmyndir og gefur í \
- 													 skyn að aðeins konur sinni starfinu. Auk þess er orðið 'kerling' stundum \
-                                                     notað í niðrandi merkingu um konur."
-skúringakona_kvk		ræstitæknir_kk				"Orðið 'skúringakona' þykir ýta undir kynjaðar staðalmyndir og gefur í \
-													 skyn að aðeins konur sinni starfinu."
-atvinnuleysingi_kk									"Orðið 'atvinnuleysingi' getur verið meiðandi fyrir fólk sem er atvinnulaust \
-													 þar sem.... XXXXXXXXXXXXXXX"	
-fóstureyðing_kvk		þungunarrof_hk				"Orðið 'fóstureyðing' þykir gildishlaðið og er úrelt. Í dag þykir betra að \
-													 nota orðin 'þungunarrof' eða 'meðgöngurof'."
-Wuhan-veira				kórónuveira_kvk				"Orðið 'Wuhan-veira' er óviðeigandi þar sem það bendlar kórónuveiruna \
-													 covid-19 við ákveðinn stað og þjóð. Það getur verið meiðandi og haft slæmar \
-                                                     afleiðingar gagnvart þjóðinni og fólki af svipuðum þjóðernum."
 
+#afhommun_kk										"Orðið 'afhommun' getur verið meiðandi þar sem það gefur í skyn \																											að samkynhneigð sé eiginleiki sem unnt og/eða æskilegt sé að fjarlægja."
+
+hjúkka_kvk				hjúkrunafræðingur_kk		"Orðið 'hjúkka' þykir ýta undir kynjaðar staðalmyndir og gefur í skyn \																										að aðeins konur sinni starfinu."
+
+hjúkrunarkona_kvk		hjúkrunarfræðingur_kk		"Orðið 'hjúkrunarkona' þykir ýta undir kynjaðar staðalmyndir og gefur í skyn \ 																								að aðeins konur sinni starfinu."
+
+skúringakerling_kvk		ræstitæknir_kk				"Orðið 'skúringakerling' þykir ýta undir kynjaðar staðalmyndir og gefur í \ 																								skyn að aðeins konur sinni starfinu. Auk þess er orðið 'kerling' stundum \ 																									notað í niðrandi merkingu um konur."
+
+skúringakona_kvk		ræstitæknir_kk				"Orðið 'skúringakona' þykir ýta undir kynjaðar staðalmyndir og gefur í \																									skyn að aðeins konur sinni starfinu."
+
+fóstureyðing_kvk		þungunarrof_hk				"Orðið 'fóstureyðing' þykir gildishlaðið og er úrelt. Í dag þykir betra að \																								nota orðin 'þungunarrof' eða 'meðgöngurof'."
+
+Wuhan-veira_kvk			kórónuveira_kvk				"Orðið 'Wuhan-veira' er óviðeigandi þar sem það bendlar kórónaveiruna \																										covid-19 við ákveðinn stað og þjóð. Það getur verið meiðandi og haft slæmar \													 											afleiðingar gagnvart þjóðinni og fólki af svipuðum þjóðernum."
+
+kynskiptingur_kk									"Orðið 'kynskiptingur' er gamalt og úrelt orð fyrir trans konur og \																										trans karla. Í dag er það talið niðrandi."
+
+kynskiptiaðgerð_kvk									"Orðið 'kynskiptiaðferð' er gamalt og úrelt ferli yfir \																													kynleiðréttingaraðgerðir trans fólks. Í dag er það talið niðrandi." 	
+
+kynvillingur_kk										"Orðið er gildishlaðið og úrelt hugtak sem notað var yfir hinsegin fólk. \																									Það er niðrandi þar sem það gefur í skyn að gagnkynhneigð sé eina \																											rétta/eðlilega kynhneigðin."
+
+kynvilla_kvk 										"Orðið er gildishlaðið og úrelt hugtak sem notað var yfir \																													samkynhneigt/hinsegin fólk. Það er niðrandi þar sem það gefur í skyn \																										að gagnkynhneigð sé eina rétta/eðlilega kynhneigðin."
+
+kynvilltur_lo										"Orðið er gildishlaðið og úrelt hugtak sem notað var um hinsegin fólk. \																									Það er niðrandi þar sem það gefur í skyn að gagnkynhneigð sé eina \																											rétta/eðlilega kynhneigðin."
+
+eskimói_kk				inúíti_kk					"Orðið 'eskimói' er óviðeigandi heiti yfir frumbyggja Norður-Ameríku \																										á Norðurslóðum. Það er niðrandi þar sem það er ekki það heiti sem \																											þeir nota sjálfir um sig. Rétt heiti er 'inúíti'."
+
+skrælingi_kk			inúíti_kk					"Orðið er úrelt hugtak sem notað var í niðrandi merkingu yfir \																												inúíta og vísaði í skinnfatnað þeirra." 
+
+hottintotti_kk			blökkumaður_kk				"'Hottintotti' er úrelt og gildishlaðið orð sem er meiðandi gagnvart \																										fólki sem er dökkt á hörund."
+
+indjáni_kk											"Orðið er úrelt heiti yfir frumbyggja Norður-Ameríku. Það er meiðandi \																										þar sem það er ekki það heiti sem þeir nota sjálfir um sig. Réttara er \																									að nota orðið 'frumbyggi' eða nafn þess þjóðflokks sem einstaklingurinn \																									tilheyrir."
+
+indíáni_kk											"Orðið er úrelt heiti yfir frumbyggja Norður-Ameríku. Það er meiðandi \																										þar sem það er ekki það heiti sem þeir nota sjálfir um sig. Réttara er \																									að nota orðið 'frumbyggi' eða nafn þess þjóðflokks sem einstaklingurinn \																									tilheyrir."
+
+rauðskinni_kk										"Orðið er úrelt og niðrandi kynþáttaheiti yfir frumbyggja Norður-Ameríku \																									sem vísar í litarhaft þeirra."
+
+#kínaveira_kvk										"Orðið 'kínaveira' er óviðeigandi þar sem það bendlar kórónaveiruna \																										covid-19 við ákveðinn stað og þjóð. Það getur verið meiðandi og haft slæmar \																								afleiðingar gagnvart þjóðinni og fólki af svipuðum þjóðernum."
+
+sígauni_kk				rómafólk_hk					"Orðið er úrelt heiti yfir rómafólk. Það er niðrandi þar sem það er ekki \																									það heiti sem rómafólk notar um sjálft sig."
+
+hommatittur_kk										"Orðið 'hommatittur' er notað á niðrandi hátt um samkynhneigða karlmenn \																									eða aðra karlmenn með vísan í að þeir séu samkynhneigðir."
+
+faggi_kk											"Orðið 'faggi' er dregið af enska orðinu 'faggot' og er notað á niðrandi \																									hátt um samkynhneigða karlmenn eða aðra karlmenn með vísan í að þeir séu, \																									hegði sér eins og eða líti út fyrir að vera samkynhneigðir.
+
+lessa_kvk				lesbía_kvk					"Orðið 'lessa' er stundum notað á meiðandi hátt um konur með vísan í \																										að þær séu karlmannlegar og þar af leiðandi hafi þær einkenni \																												samkynhneigðrar konu."
+
+bæjari_kk				tvíkynhneigður_lo			"Orðið er stundum notað yfir þann sem er tvíkynhneigður. Það þykir \																										niðrandi og því betra að tala um 'tvíkynhneigð' eða 'tvíkynhneigða' \																										einstaklinga."
+
+öfugur_lo											"Lýsingarorðið 'öfugur' er stundum notað yfir samkynhneigða. Það er \																										niðrandi þar sem það gefur í skyn að kynhneigð þeirra sé röng/öfug við \																									það sem er „rétt“."
+
+epalhommi_kk										"Orðið var upphaflega notað á niðrandi hátt um samkynhneigða karlmenn \																										og byggir á ákveðinni staðalmynd að allir samkynhneigðir karlmenn hafi \																									áhuga á hönnunarvörum og versli þ.a.l. í hönnunarbúðinni Epal."
+
+hommi_kk											"Orðið 'hommi' er stundum notað í niðrandi merkingu um karlmenn. Þegar \																									samkynhneigðir karlmenn nota það um sig er það hins vegar ekki óviðeigandi."
+
+aftaníossi_kk										"Orðið er yfirleitt notað í niðrandi merkingu yfir samkynhneigða karlmenn."
+
+grjón_hk											"Orðið 'grjón' er stundum notað á niðrandi hátt yfir Asíubúa með vísan í \																									matarmenningu þeirra."
+
+#grjóni_kk											"Orðið 'grjóni' er stundum notað á niðrandi hátt yfir Asíubúa með vísan í \																									matarmenningu þeirra."
+
+öfuguggi_kk											"Orðið 'öfuguggi' er stundum notað yfir samkynhneigða. Það er niðrandi þar \																								sem það gefur í skyn að kynhneigð þeirra sé röng/öfug við það sem er „rétt“."
+
+ókynhneigður_lo			eikynhneigður_lo			"Lýsingarorðið 'ókynhneigður' þykir bera með sér neikvæðan blæ vegna \																										„ó“-forskeytisins. Betra er að nota orðið 'eikynhneigður'."
+
+#millikynja_lo			intersex_lo					"Orðið hefur verið notað um fólk sem fæðist með ódæmigerð kyneinkenni \																										en þykir niðrandi. Betra er að nota orðið 'intersex'."
+
+sódómskur_lo										"Orðið hefur verið notað um þá sem stunda kynmök með sama kyni, þá \																										aðallega karla. Það er mjög niðrandi þar sem það gefur til kynna að \																										um afbrigðilega hegðun sé að ræða."
+
+tvítóla_lo				intersex_lo					"Orðið hefur verið notað um fólk sem fæðist með ódæmigerð kyneinkenni \																										og er niðrandi. Betra er að nota orðið 'intersex'."
+
+tvítóli_lo				intersex_lo					"Orðið hefur verið notað um fólk sem fæðist með ódæmigerð kyneinkenni \																										og er niðrandi. Betra er að nota orðið 'intersex'."
+
+faggalegur_lo										"Lýsingarorðið 'faggalegur' er dregið af enska orðinu 'faggot' og er \																										notað á niðrandi hátt um samkynhneigða karlmenn eða aðra karlmenn með \																										vísan í að þeir séu, hegði sér eins og eða líti út fyrir að vera \																											samkynhneigðir."
+
+#Gay_Pride_no			Pride_no					"Íslenska hátíðin sem áður hét 'Gay Pride' heitir í dag 'Pride' eða \																										'Hinsegindagar'. Upphaflega var hreyfingin að baki hátíðunum bundin \																										samkynhneigðum en eftir að tvíkynhneigðir og transfólk höfðu líka \																											haslað sér völl var heitið stytt til að útiloka engan."
+
+kynhverfur_lo			samkynhneigður_lo			"Orðið 'kynhverfa' var eitt af þeim orðum sem búin voru til af hinu \																										opinbera til að lýsa samkynhneigð á níunda áratug 20. aldar. Það \																											þykir gildishlaðið og er ekki hluti af þeim orðaforða sem hinsegin \																										fólk kýs að nota um sig."  
+
+
+hommalegur_lo										"Lýsingarorðið 'hommalegur' er oft notað á niðrandi hátt um samkynhneigða \																									karlmenn eða aðra karlmenn með vísan í að þeir séu, hegði sér eins og eða \																									líti út fyrir að vera samkynhneigðir."
