--- a/src/reynir_correct/config/TabooWords.conf
+++ b/src/reynir_correct/config/TabooWords.conf
@@ -22,36 +22,31 @@ blámaður_kk			    blökkumaður_kk				"Orðið er úrelt og gildishlaðið kyn
 afríkunegri_kk			blökkumaður_kk				"Orðið er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
  													 fólki sem er dökkt á hörund."
 niggari					blökkumaður_kk				"Orðið er gildishlaðið kynþáttaheiti sem er meiðandi gagnvart fólki sem \
-													 er dökkt á hörund"
+													 er dökkt á hörund."
 svertingi				blökkumaður_kk				"Orðið er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
 													 fólki sem er dökkt á hörund."
 negríti					blökkumaður_kk				"Orðið er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
 													 fólki sem er dökkt á hörund."
 halanegri				blökkumaður_kk				"Orðið er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
 													 fólki sem er dökkt á hörund."
-júði_kk				    gyðingur_kk         		"Sá sem aðhyllist \
-                                           			gyðingdóm er 'gyðingur'."
-múhameðstrú_kvk			íslam_hk            		"Rétt heiti \
-                                           			 trúarbragðanna er 'íslam'."
+júði_kk				    gyðingur_kk         		"Orðið er talið niðrandi; réttara er að nota 'gyðingur'."
+múhameðstrú_kvk			íslam_hk            		"Rétt heiti trúarbragðanna er 'íslam'."
 múhameðstrúarmaður_kk	múslími_kk          		"Sá sem aðhyllist íslam er 'múslími'."
-afhomma_so                                  		"Sögnin 'afhomma' getur verið meiðandi \
-                                           			 þar sem hún gefur í skyn að samkynhneigð sé \
-                                           			 eiginleiki sem unnt og/eða æskilegt \
-                                           			 sé að fjarlægja."
-hjúkka_kvk				hjúkrunafræðingur_kk		"Orðið 'hjúkka' þykir ýta undir kynjaðar staðalmyndir og gefur í skyn \	
+afhomma_so                                  		"Sögnin 'afhomma' getur verið meiðandi þar sem hún gefur í skyn að samkynhneigð \
+													 sé eiginleiki sem unnt og/eða æskilegt sé að fjarlægja."
+hjúkka_kvk				hjúkrunarfræðingur_kk		"Orðið 'hjúkka' þykir ýta undir kynjaðar staðalmyndir og gefur til kynna \	
 													 að aðeins konur sinni starfinu."
-hjúkrunarkona_kvk		hjúkrunarfræðingur_kk		"Orðið 'hjúkrunarkona' þykir ýta undir kynjaðar staðalmyndir og gefur í skyn \
+hjúkrunarkona_kvk		hjúkrunarfræðingur_kk		"Orðið 'hjúkrunarkona' þykir ýta undir kynjaðar staðalmyndir og gefur til kynna \
  													 að aðeins konur sinni starfinu."
-skúringakerling_kvk		ræstitæknir_kk				"Orðið 'skúringakerling' þykir ýta undir kynjaðar staðalmyndir og gefur í \
- 													 skyn að aðeins konur sinni starfinu. Auk þess er orðið 'kerling' stundum \
+skúringakerling_kvk		ræstitæknir_kk				"Orðið 'skúringakerling' þykir ýta undir kynjaðar staðalmyndir og gefur til \
+ 													 kynna að aðeins konur sinni starfinu. Auk þess er orðið 'kerling' stundum \
                                                      notað í niðrandi merkingu um konur."
-skúringakona_kvk		ræstitæknir_kk				"Orðið 'skúringakona' þykir ýta undir kynjaðar staðalmyndir og gefur í \
-													 skyn að aðeins konur sinni starfinu."
-atvinnuleysingi_kk									"Orðið 'atvinnuleysingi' getur verið meiðandi fyrir fólk sem er atvinnulaust \
-													 þar sem.... XXXXXXXXXXXXXXX"	
-fóstureyðing_kvk		þungunarrof_hk				"Orðið 'fóstureyðing' þykir gildishlaðið og er úrelt. Í dag þykir betra að \
+skúringakona_kvk		ræstitæknir_kk				"Orðið 'skúringakona' þykir ýta undir kynjaðar staðalmyndir og gefur til \
+													 kynna að aðeins konur sinni starfinu."
+atvinnuleysingi_kk									"Orðið 'atvinnuleysingi' getur verið meiðandi fyrir fólk sem er í atvinnuleit."
+fóstureyðing_kvk		þungunarrof_hk				"Orðið 'fóstureyðing' þykir gildishlaðið og er úrelt. Hlutlausara er að \
 													 nota orðin 'þungunarrof' eða 'meðgöngurof'."
-Wuhan-veira				kórónuveira_kvk				"Orðið 'Wuhan-veira' er óviðeigandi þar sem það bendlar kórónuveiruna \
-													 covid-19 við ákveðinn stað og þjóð. Það getur verið meiðandi og haft slæmar \
-                                                     afleiðingar gagnvart þjóðinni og fólki af svipuðum þjóðernum."
-
+Wuhan-veira				kórónuveira_kvk				"Orðið 'Wuhan-veira' er óheppilegt þar sem það bendlar kórónuveiruna \
+													 SARS-CoV-19 við tiltekið land og þjóð án þess að rök séu fyrir slíkri tengingu."
+Kína-veira				kórónuveira_kvk				"Orðið 'Kína-veira' er óheppilegt þar sem það bendlar kórónuveiruna \
+													 SARS-CoV-19 við tiltekið land og þjóð án þess að rök séu fyrir slíkri tengingu."
