Fixed tests; added Inúíti to capitalization_errors

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -3639,6 +3639,7 @@ vara		+kk +kvk +hk
 Aríi
 Búddisti
 Eskimói
+Inúíti
 Islam
 Íslam
 # Gyðingur 		# can also be lower-case, so maybe not include this 
