removed acceptable words from taboo list

--- a/src/reynir_correct/config/TabooWords.conf
+++ b/src/reynir_correct/config/TabooWords.conf
@@ -87,21 +87,13 @@ sígauni_kk				rómafólk_hk					"Orðið er úrelt heiti yfir rómafólk. Það
 
 hommatittur_kk										"Orðið 'hommatittur' er notað á niðrandi hátt um samkynhneigða karlmenn \																									eða aðra karlmenn með vísan í að þeir séu samkynhneigðir."
 
-faggi_kk											"Orðið 'faggi' er dregið af enska orðinu 'faggot' og er notað á niðrandi \																									hátt um samkynhneigða karlmenn eða aðra karlmenn með vísan í að þeir séu, \																									hegði sér eins og eða líti út fyrir að vera samkynhneigðir.
-
-lessa_kvk				lesbía_kvk					"Orðið 'lessa' er stundum notað á meiðandi hátt um konur með vísan í \																										að þær séu karlmannlegar og þar af leiðandi hafi þær einkenni \																												samkynhneigðrar konu."
+faggi_kk											"Orðið 'faggi' er dregið af enska orðinu 'faggot' og er notað á niðrandi \																									hátt um samkynhneigða karlmenn eða aðra karlmenn með vísan í að þeir séu, \																									hegði sér eins og eða líti út fyrir að vera samkynhneigðir."
 
 bæjari_kk				tvíkynhneigður_lo			"Orðið er stundum notað yfir þann sem er tvíkynhneigður. Það þykir \																										niðrandi og því betra að tala um 'tvíkynhneigð' eða 'tvíkynhneigða' \																										einstaklinga."
 
-öfugur_lo											"Lýsingarorðið 'öfugur' er stundum notað yfir samkynhneigða. Það er \																										niðrandi þar sem það gefur í skyn að kynhneigð þeirra sé röng/öfug við \																									það sem er „rétt“."
-
 epalhommi_kk										"Orðið var upphaflega notað á niðrandi hátt um samkynhneigða karlmenn \																										og byggir á ákveðinni staðalmynd að allir samkynhneigðir karlmenn hafi \																									áhuga á hönnunarvörum og versli þ.a.l. í hönnunarbúðinni Epal."
 
-hommi_kk											"Orðið 'hommi' er stundum notað í niðrandi merkingu um karlmenn. Þegar \																									samkynhneigðir karlmenn nota það um sig er það hins vegar ekki óviðeigandi."
-
 aftaníossi_kk										"Orðið er yfirleitt notað í niðrandi merkingu yfir samkynhneigða karlmenn."
-
-grjón_hk											"Orðið 'grjón' er stundum notað á niðrandi hátt yfir Asíubúa með vísan í \																									matarmenningu þeirra."
 
 #grjóni_kk											"Orðið 'grjóni' er stundum notað á niðrandi hátt yfir Asíubúa með vísan í \																									matarmenningu þeirra."
 
@@ -122,6 +114,5 @@ faggalegur_lo										"Lýsingarorðið 'faggalegur' er dregið af enska orðin
 #Gay_Pride_no			Pride_no					"Íslenska hátíðin sem áður hét 'Gay Pride' heitir í dag 'Pride' eða \																										'Hinsegindagar'. Upphaflega var hreyfingin að baki hátíðunum bundin \																										samkynhneigðum en eftir að tvíkynhneigðir og transfólk höfðu líka \																											haslað sér völl var heitið stytt til að útiloka engan."
 
 kynhverfur_lo			samkynhneigður_lo			"Orðið 'kynhverfa' var eitt af þeim orðum sem búin voru til af hinu \																										opinbera til að lýsa samkynhneigð á níunda áratug 20. aldar. Það \																											þykir gildishlaðið og er ekki hluti af þeim orðaforða sem hinsegin \																										fólk kýs að nota um sig."  
-
 
 hommalegur_lo										"Lýsingarorðið 'hommalegur' er oft notað á niðrandi hátt um samkynhneigða \																									karlmenn eða aðra karlmenn með vísan í að þeir séu, hegði sér eins og eða \																									líti út fyrir að vera samkynhneigðir."
