added to config file

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -3599,6 +3599,7 @@ Tungl
 vesturlönd
 norðurlönd
 óskarsverðlaun 	#ekki leiðrétt, fer í 'if all(m.stofn not in stems for m in meanings)' en meanings = []
+internet
 
 # Holidays
 # Unnecessary to include: föstudagurinn langi
