updated config file for lower4upper-proper handling

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -3884,7 +3884,6 @@ Lettneska
 litáen
 litái
 Litáískur
-Litáíska
 kanada
 kanadamaður
 Kanadískur
@@ -4030,6 +4029,8 @@ Sýrlenskur
 ameríka
 Amerískur
 Afrísk-amerískur
+líbía
+Líbískur
 
 austfirðir
 austurland
@@ -4293,7 +4294,6 @@ Hamingja
 #Imam
 #Indie
 Indíáni
-Internet
 Kaldur
 Karate
 Kaþólskur
@@ -4303,7 +4303,6 @@ Landsfundur
 Landsþing
 Leiðtogi
 Ljósmóðir
-Líbýskur
 Lóuþræll
 Löggjafarvald
 Lögregla
