added to config file

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -3654,7 +3654,6 @@ Múslími
 Múslimi
 Sjíti
 Súnníti
-evrópa
 sjálfstæðismaður
 samfylkingarmaður
 framsóknarmaður
@@ -3673,8 +3672,6 @@ Kreppa
 Endurreisn
 Jörð
 Tungl
-vesturlönd
-norðurlönd
 óskarsverðlaun 	#ekki leiðrétt, fer í 'if all(m.stofn not in stems for m in meanings)' en meanings = []
 internet
 
@@ -3815,7 +3812,6 @@ Fulltrúaþing
 Sambandslög
 Heimsmeistaramót
 Grunnskóli
-Höfuðborgarsvæði
 
 # !!! TODO: Expand following list of countries and related adjectives
 
@@ -3891,6 +3887,9 @@ spánn
 spánverji
 Spænskur
 Spænska
+baskaland
+baski
+Baskneskur
 japan
 japani
 Japanskur
@@ -3974,7 +3973,6 @@ Brasilískur
 indland
 indverji
 Indverskur
-#Indverska
 taíland
 taílendingur
 Taílenskur
@@ -3992,22 +3990,21 @@ Mongólskur
 indónesía
 indónesi
 Indónesískur
-#Indónesíska
 kórea
 kóreumaður
 Kóreskur
 Kóreska
-norður-kórea 		#verður að Norður-kórea
-norður-kóreumaður	#verður að Norður-kóreumaður
+norður-kórea 	
+norður-kóreumaður
 Norðurkóreskur
-suður-kórea 		#verður að Suður-kórea
-suður-kóreumaður	#ekki leiðrétt - fellur undir 'if all(m.stofn not in stems for m in meanings)' því orðið finnst ekki í meanings
+suður-kórea 
+suður-kóreumaður
 Suðurkóreskur
-nýja-sjáland 		#ekki leiðrétt - fellur undir 'if lower and any(m.ordfl not in {"kk", "kvk", "hk"} for m in tval)' því BÍN segir að þetta geti líka verið sögn?
+nýja-sjáland
 nýsjálendingur
 Nýsjálenskur
-suður-afríka 		#verður að Suður-afríka
-suður-afríkumaður 	#verður að Suður-afríkumaður
+suður-afríka
+suður-afríkumaður
 Suðurafrískur
 kasakstan
 kasaki
@@ -4031,6 +4028,24 @@ Amerískur
 Afrísk-amerískur
 líbía
 Líbískur
+karíbahaf
+#karíbi 	# Not in BÍN
+#Karíbskur 	# Not in BÍN
+Karabískur
+evrópa
+evrópubúi
+Evrópskur
+austur-evrópa
+#austur-evrópubúi 	# Not corrected, not in BÍN
+Austurevrópskur
+vestur-evrópa
+#vestur-evrópubúi 	# Not corrected, not in BÍN
+Vesturevrópskur
+vesturlönd
+vesturlandabúi
+norðurlönd
+norðurlandabúi
+norðurlandaþjóð
 
 austfirðir
 austurland
@@ -4042,14 +4057,13 @@ suðvesturland
 suðurland
 suðurnes
 vestfirðir
+vestfjarðakjálki
 vesturland
 norðlendingur
 austfirðingur
 sunnlendingur
 suðurnesjamaður
 vestfirðingur
-
-# Context-free lower-case (ritregla 1.3.3.2)
 
 norðvesturkjördæmi
 norðausturkjördæmi
@@ -4058,13 +4072,37 @@ suðvesturkjördæmi
 reykjavíkurkjördæmi
 
 # Language families
-# Unable to include: afróasískur, aímarískur, algískur, altískur, ástró-asískur,
-# ástronesískur, dravidískur, dravídamál, eskimó-aleútískur, karíbamál, nígerkongómál,
-# nílósaharamál, sinó-tíbetskur, suðurkákasískur, túpímál
+# Unable to include: aímarískur, algískur, ástronesískur, dravidískur, suðurkákasískur
 
 Indóevrópskur
 Semískur
 Úralskur
+Afróasískur 
+Altískur 
+Ástró-Asískur
+Dravídamál
+Suðurkákasískur
+
+# Place names
+
+laugavegur
+breiðholt
+efra-breiðholt
+neðra-breiðholt
+laugardalur
+kópavogur
+hafnarfjörður
+garðabær
+seltjarnarnes
+mosfellsbær
+árbær
+grafarvogur
+grafarholt
+Höfuðborgarsvæði
+þingvellir
+keflavík
+elliðaár
+vatnsmýri
 
 # Context-free lower-case (ritregla 1.3.3.2)
 
@@ -4198,7 +4236,7 @@ Vínarterta
 # Medical terms
 Akureyrarveiki
 Alzheimers
-# Alzheimers-sjúkdómur
+Alzheimers-Sjúkdómur
 Asíuflensa
 Downs
 # Downs-heilkenni
@@ -4261,7 +4299,6 @@ Evuklæði
 Gordíonshnútur
 Grettistak
 Gróusaga
-# Gvendarbrunnur  # !!! Þetta hlýtur að teljast örnefni, og er merkt þannig í BÍN?
 Hrunadans
 Kaupahéðinn
 Kínaskór
@@ -4305,7 +4342,7 @@ Leiðtogi
 Ljósmóðir
 Lóuþræll
 Löggjafarvald
-Lögregla
+#Lögregla 		# Uppercase when it applies to the institution
 Lútherstrú
 Lýðveldi
 Markaðsstjóri
