--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -3659,6 +3659,8 @@ samfylkingarmaður
 framsóknarmaður
 miðflokksmaður
 pírati
+repúblikani
+demókrati
 Lenínismi
 Marxismi
 Darwinismi
@@ -3674,6 +3676,10 @@ Jörð
 Tungl
 óskarsverðlaun 	#ekki leiðrétt, fer í 'if all(m.stofn not in stems for m in meanings)' en meanings = []
 internet
+litla-hraun
+ólympíuleikar
+sumarólympíuleikar
+vetrarólympíuleikar
 
 # Holidays
 # Unnecessary to include: föstudagurinn langi
@@ -3762,6 +3768,7 @@ Prófessor
 #Ríkislögreglustjóri
 Alþingismaður
 Alþingiskona
+alþingi
 Heimsmeistari
 
 # Weekdays
@@ -3798,6 +3805,7 @@ Viðskiptafræði
 # Committees, departments, etc.
 
 Skemmtinefnd
+þingvallanefnd
 Öryggisráð
 Sambandsráð
 Ráðherraráð
@@ -3843,6 +3851,9 @@ rússland
 rússi
 Rússneskur
 Rússneska
+prússland
+prússi
+Prússneskur
 færeyjar
 færeyingur
 Færeyskur
@@ -3898,6 +3909,7 @@ arabía
 arabi
 Arabískur
 Arabíska
+mið-arabía
 filippseyjar
 filippseyingur
 Filippseyskur
@@ -3961,6 +3973,9 @@ slóvakía
 slóvaki
 Slóvakískur
 Slóvakíska
+líbanon
+líbani
+Líbanskur
 mexíkó
 mexíkói
 Mexíkóskur
@@ -4006,6 +4021,7 @@ Nýsjálenskur
 suður-afríka
 suður-afríkumaður
 Suðurafrískur
+mið-austurlönd
 kasakstan
 kasaki
 Kasakskur
@@ -4022,7 +4038,20 @@ Germanska
 sýrland
 sýrlendingur
 Sýrlenskur
+túnis
+túnisi
+Túniskur
 Íslamskur
+tamíli
+Tamílskur
+mári
+Márískur
+bantúi
+inúíti
+normanni
+frísland
+fríslendingur
+Frísneskur
 ameríka
 Amerískur
 Afrísk-amerískur
@@ -4041,6 +4070,18 @@ Austurevrópskur
 vestur-evrópa
 #vestur-evrópubúi 	# Not corrected, not in BÍN
 Vesturevrópskur
+norður-evrópa
+suður-evrópa
+mið-evrópa
+asía
+asíubúi
+Asískur
+suður-asía
+austur-asía
+suðaustur-asía
+afríka
+afríkubúi
+Afrískur
 vesturlönd
 vesturlandabúi
 norðurlönd
@@ -4064,6 +4105,7 @@ austfirðingur
 sunnlendingur
 suðurnesjamaður
 vestfirðingur
+mývetningur
 
 norðvesturkjördæmi
 norðausturkjördæmi
@@ -4103,6 +4145,7 @@ Höfuðborgarsvæði
 keflavík
 elliðaár
 vatnsmýri
+golfstraumur
 
 # Context-free lower-case (ritregla 1.3.3.2)
 
