added multi-word expression

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -4577,6 +4577,7 @@ við líði                    	$error(YI, við lýði)
 þíðir ekkert að					$error(YI, þýðir ekkert að)
 þýða í ísinn					$error(YI, þíða í ísinn)
 þessar stundirnar               $error(WRONG_NUMBER, þessa stundina)
+að sjálfu sér 					$error(AÐAF, af sjálfu sér)
 
 # Include WrongWords.conf file
 
