Added 'í hann krappann' to GreynirCorrect.conf

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -4454,6 +4454,7 @@ himinninn heiðir				$error(WRONG_CASE, himininn heiðir)
 hreint fyrir sýnum dyrum		$error(YI, hreint fyrir sínum dyrum)
 hvað á þetta að þíða			$error(YI, hvað á þetta að þýða)
 hvaðanæva að af landinu     	$error(REDUNDANT_WORD, hvaðanæva af landinu)
+í hann krappann                 $error(WRONG_WORD, í hann krappan)
 kom að fjöllum                  $error(AÐAF, kom af fjöllum)
 komst að fjöllum                $error(AÐAF, komst af fjöllum)
 komu að fjöllum                 $error(AÐAF, komu af fjöllum)
