updated taboo words

--- a/src/reynir_correct/config/TabooWords.conf
+++ b/src/reynir_correct/config/TabooWords.conf
@@ -123,7 +123,7 @@ indíáni_kk											"Orðið er úrelt heiti yfir frumbyggja Norður-Ameríku
 rauðskinni_kk										"Orðið er úrelt og niðrandi kynþáttaheiti yfir frumbyggja Norður-Ameríku \
 													sem vísar í húðlit þeirra."
 
-#kínaveira_kvk										"Orðið 'kínaveira' er óviðeigandi þar sem það bendlar kórónaveiruna \
+#Kínaveira_kvk										"Orðið 'Kínaveira' er óviðeigandi þar sem það bendlar kórónaveiruna \
 #													covid-19 við ákveðinn stað og þjóð. Það getur verið meiðandi og haft slæmar \
 #													afleiðingar gagnvart þjóðinni og fólki af svipuðum þjóðernum."
 
@@ -183,3 +183,71 @@ kynhverfur_lo			samkynhneigður_lo			"Orðið 'kynhverfa' var eitt af þeim orð
 hommalegur_lo										"Lýsingarorðið 'hommalegur' er oft notað á niðrandi hátt um samkynhneigða \
 													karlmenn eða aðra karlmenn með vísan í að þeir séu, hegði sér eins og eða \
 													líti út fyrir að vera samkynhneigðir."
+
+þrifakona_kvk			ræstitæknir_kk				"Orðið 'þrifakona' þykir ýta undir kynjaðar staðalmyndir og \
+													gefur í skyn að aðeins konur sinni þrifum."
+	
+
+fóstra_kvk											"Orðið þykir ýta undir kynjaðar staðalmyndir. Í dag þykir við hæfi að nota orðin \
+													'leikskólakennari/leikskólaliði/leikskólastarfsmaður'. Sum vilja þó enn nota \
+													starfsheitið 'fóstra', t.d. þau sem fóru í Fósturskóla Íslands."
+
+
+dagmamma_kvk			dagforeldri_hk				"Orðið þykir ýta undir kynjaðar staðalmyndir. Í dag þykir við hæfi að nota \
+													orðið 'dagforeldri'."
+
+niggari_kk											"Orðið er gildishlaðið slangur/kynþáttaheiti sem er meiðandi gagnvart fólki \
+													sem er dökkt á hörund."
+
+nýbúi_kk				innflytjandi_kk				"'Nýbúi' er gildishlaðið og úrelt orð sem upprunalega átti að ná yfir alla þá \
+													sem flytja til nýs lands til að setjast þar að. Í dag takmarkast það þó við \
+													þá einstaklinga sem eru aðgreinanlegir hvítu fólki í útliti, t.d. fólk frá \
+													Asíu-, Afríku- eða miðausturlöndum, og er því ekki lengur viðeigandi."
+
+negratelpa_kvk										"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+													fólki sem er dökkt á hörund. Þar af leiðandi eru samsett orð sem innihalda 'negri'\
+													einnig óviðeigandi."
+
+negrakona_kvk										"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+													fólki sem er dökkt á hörund. Þar af leiðandi eru samsett orð sem innihalda 'negri'\
+													einnig óviðeigandi."
+
+negrakarl_kk										"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+													fólki sem er dökkt á hörund. Þar af leiðandi eru samsett orð sem innihalda 'negri'\
+													einnig óviðeigandi."
+
+negrakarlmaður_kk									"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+													fólki sem er dökkt á hörund. Þar af leiðandi eru samsett orð sem innihalda 'negri'\
+													einnig óviðeigandi."
+
+negrakóngur_kk										"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+													fólki sem er dökkt á hörund. Þar af leiðandi eru samsett orð sem innihalda 'negri'\
+													einnig óviðeigandi."
+
+negrakoss											"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+													fólki sem er dökkt á hörund. Þar af leiðandi eru samsett orð sem innihalda 'negri'\
+													einnig óviðeigandi."
+
+negralist											"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+													fólki sem er dökkt á hörund. Þar af leiðandi eru samsett orð sem innihalda 'negri'\
+													einnig óviðeigandi."
+
+negramella											"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+													fólki sem er dökkt á hörund. Þar af leiðandi eru samsett orð sem innihalda 'negri'\
+													einnig óviðeigandi."
+
+negranögl											"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+													fólki sem er dökkt á hörund. Þar af leiðandi eru samsett orð sem innihalda 'negri'\
+													einnig óviðeigandi."
+
+negraríki											"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+													fólki sem er dökkt á hörund. Þar af leiðandi eru samsett orð sem innihalda 'negri'\
+													einnig óviðeigandi."
+
+negrasálmur											"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+													fólki sem er dökkt á hörund. Þar af leiðandi eru samsett orð sem innihalda 'negri'\
+													einnig óviðeigandi."
+
+negrasöngvari										"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+													fólki sem er dökkt á hörund. Þar af leiðandi eru samsett orð sem innihalda 'negri'\
+													einnig óviðeigandi."
