updated taboo words

--- a/src/reynir_correct/config/TabooWords.conf
+++ b/src/reynir_correct/config/TabooWords.conf
@@ -34,7 +34,7 @@ afríkunegri_kk			blökkumaður_kk				"Orðið er úrelt og gildishlaðið kynþ
 													fólki sem er dökkt á hörund."
 
 niggari_kk				blökkumaður_kk				"Orðið er gildishlaðið kynþáttaheiti sem er meiðandi gagnvart fólki sem \
-													er dökkt á hörund"
+													er dökkt á hörund."
 
 svertingi_kk			blökkumaður_kk				"Orðið er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
 													fólki sem er dökkt á hörund."
@@ -195,9 +195,6 @@ fóstra_kvk											"Orðið þykir ýta undir kynjaðar staðalmyndir. Í dag
 
 dagmamma_kvk			dagforeldri_hk				"Orðið þykir ýta undir kynjaðar staðalmyndir. Í dag þykir við hæfi að nota \
 													orðið 'dagforeldri'."
-
-niggari_kk											"Orðið er gildishlaðið slangur/kynþáttaheiti sem er meiðandi gagnvart fólki \
-													sem er dökkt á hörund."
 
 nýbúi_kk				innflytjandi_kk				"'Nýbúi' er gildishlaðið og úrelt orð sem upprunalega átti að ná yfir alla þá \
 													sem flytja til nýs lands til að setjast þar að. Í dag takmarkast það þó við \
