--- a/src/reynir_correct/config/TabooWords.conf
+++ b/src/reynir_correct/config/TabooWords.conf
@@ -5,6 +5,41 @@
 
 # This file is included in GreynirCorrect.conf
 
+# The format is as follows, in whitespace-separated columns within each line:
+
+# 1) Taboo word + '_' + category
+# 2) Optional replacement word + '_' + category.
+#    There can be multiple replacement words,
+#    separated by tight forward slashes '/'.
+# 3) Optional explanatory comment, enclosed in double quotes.
+
+# Note that lines can be continued by ending them with a backslash '\',
+# which is especially useful for long explanatory comments.
+
+pussa_kvk				píka_kvk
+tussa_kvk				píka_kvk
+kunta_kvk				píka_kvk
+tilli_kk				limur_kk
+hommatittur_kk			hommi_kk
+faggi_kk				hommi_kk
+lessa_kvk				lesbía_kvk
+negri_kk				blökkumaður_kk
+halanegri_kk			blökkumaður_kk
+surtur_kk				blökkumaður_kk
+blámaður_kk				blökkumaður_kk
+júði_kk					gyðingur_kk					"Sá sem aðhyllist gyðingdóm er 'gyðingur'."
+
+múhameðstrú_kvk			íslam_hk					"Rétt heiti trúarbragðanna er 'íslam'."
+
+múhameðstrúarmaður_kk	múslími_kk					"Sá sem aðhyllist íslam er 'múslími'."
+
+fóstureyðing_kvk		þungunarrof_hk/meðgöngurof_hk
+
+afhomma_so											"Sögnin 'afhomma' getur verið meiðandi \
+													þar sem hún gefur í skyn að samkynhneigð sé \
+													eiginleiki sem unnt og/eða æskilegt \
+													sé að fjarlægja."
+
 pussa_kvk				píka_kvk					"Orðið er stundum notað yfir kynfæri kvenna og er óviðeigandi. \
 													Það er líka notað sem meiðyrði yfir konur."
 
@@ -221,30 +256,30 @@ negrakóngur_kk										"Orðið 'negri' er úrelt og gildishlaðið kynþátta
 													fólki sem er dökkt á hörund. Þar af leiðandi eru samsett orð sem innihalda 'negri'\
 													einnig óviðeigandi."
 
-negrakoss											"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+negrakoss_kk										"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
 													fólki sem er dökkt á hörund. Þar af leiðandi eru samsett orð sem innihalda 'negri'\
 													einnig óviðeigandi."
 
-negralist											"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+negralist_kvk											"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
 													fólki sem er dökkt á hörund. Þar af leiðandi eru samsett orð sem innihalda 'negri'\
 													einnig óviðeigandi."
 
-negramella											"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+negramella_kvk										"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
 													fólki sem er dökkt á hörund. Þar af leiðandi eru samsett orð sem innihalda 'negri'\
 													einnig óviðeigandi."
 
-negranögl											"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+negranögl_kvk										"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
 													fólki sem er dökkt á hörund. Þar af leiðandi eru samsett orð sem innihalda 'negri'\
 													einnig óviðeigandi."
 
-negraríki											"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+negraríki_hk										"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
 													fólki sem er dökkt á hörund. Þar af leiðandi eru samsett orð sem innihalda 'negri'\
 													einnig óviðeigandi."
 
-negrasálmur											"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+negrasálmur_kk										"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
 													fólki sem er dökkt á hörund. Þar af leiðandi eru samsett orð sem innihalda 'negri'\
 													einnig óviðeigandi."
 
-negrasöngvari										"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+negrasöngvari_kk									"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
 													fólki sem er dökkt á hörund. Þar af leiðandi eru samsett orð sem innihalda 'negri'\
 													einnig óviðeigandi."
