--- a/src/reynir_correct/config/TabooWords.conf
+++ b/src/reynir_correct/config/TabooWords.conf
@@ -16,29 +16,249 @@
 # Note that lines can be continued by ending them with a backslash '\',
 # which is especially useful for long explanatory comments.
 
-pussa_kvk				píka_kvk
-tussa_kvk				píka_kvk
-kunta_kvk				píka_kvk
 tilli_kk				limur_kk
-hommatittur_kk			hommi_kk
-faggi_kk				hommi_kk
 lessa_kvk				lesbía_kvk
-negri_kk				blökkumaður_kk
-halanegri_kk			blökkumaður_kk
-surtur_kk				blökkumaður_kk
-blámaður_kk			    blökkumaður_kk
 
-júði_kk				    gyðingur_kk         "Sá sem aðhyllist \
-                                            gyðingdóm er 'gyðingur'."
+pussa_kvk				píka_kvk					"Orðið er stundum notað yfir kynfæri kvenna og er óviðeigandi. \
+													Það er líka notað sem meiðyrði yfir konur."
 
-múhameðstrú_kvk			íslam_hk            "Rétt heiti \
-                                            trúarbragðanna er 'íslam'."
+tussa_kvk				píka_kvk					"Orðið er stundum notað yfir kynfæri kvenna og er óviðeigandi. \
+													Það er líka notað sem meiðyrði yfir konur."
 
-múhameðstrúarmaður_kk	múslími_kk          "Sá sem aðhyllist íslam er 'múslími'."
+kunta_kvk				píka_kvk					"Orðið er stundum notað yfir kynfæri kvenna og er óviðeigandi. \
+													Það er líka notað sem meiðyrði yfir konur."
 
-fóstureyðing_kvk        þungunarrof_hk/meðgöngurof_hk
+tippalingur_kk			limur_hk					"Orðið er notað yfir kynfæri karla og getur verið lítillækkandi og meiðandi."
 
-afhomma_so                                  "Sögnin 'afhomma' getur verið meiðandi \
-                                            þar sem hún gefur í skyn að samkynhneigð sé \
-                                            eiginleiki sem unnt og/eða æskilegt \
-                                            sé að fjarlægja."
+typpalingur_kk			limur_hk					"Orðið er notað yfir kynfæri karla og getur verið lítillækkandi og meiðandi."
+
+trukkalessa_kvk			lesbía_kvk					"Orðið 'trukkalessa' er meiðandi þar sem það byggir á staðalmynd \
+													um útlit eða skapgerð samkynhneigðrar konu."
+
+negri_kk				blökkumaður_kk				"Orðið er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+													fólki sem er dökkt á hörund."
+
+surtur_kk				blökkumaður_kk				"Orðið er gildishlaðið kynþáttaheiti sem er meiðandi gagnvart fólki sem \
+													er dökkt á hörund."
+
+blámaður_kk			    blökkumaður_kk				"Orðið er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+													fólki sem er dökkt á hörund."
+
+afríkunegri_kk			blökkumaður_kk				"Orðið er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+													fólki sem er dökkt á hörund."
+
+niggari_kk				blökkumaður_kk				"Orðið er gildishlaðið kynþáttaheiti sem er meiðandi gagnvart fólki sem \
+													er dökkt á hörund."
+
+svertingi_kk			blökkumaður_kk				"Orðið er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+													fólki sem er dökkt á hörund."
+
+negríti_kk				blökkumaður_kk				"Orðið er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+													fólki sem er dökkt á hörund."
+
+halanegri_kk			blökkumaður_kk				"Orðið er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+													fólki sem er dökkt á hörund."
+
+júði_kk				    gyðingur_kk         		"Orðið 'júði' er úrelt og meiðandi. Rétt er að nota orðið 'gyðingur'."
+
+múhameðstrú_kvk			íslam_hk            		"Ekki er rétt að nota orðið 'múhameðstrú' yfir 'íslam' þar sem Múhameð \
+													er spámaður en ekki guð."
+
+múhameðstrúarmaður_kk	múslími_kk          		"Sá sem aðhyllist íslam er 'múslími'. Ekki er rétt að nota orðið \
+													'múhameðstrúarmaður ' yfir fylgjendur íslam þar sem Múhameð er spámaður	en ekki guð."
+
+afhomma_so                                  		"Sögnin 'afhomma' getur verið meiðandi þar sem hún gefur í skyn að samkynhneigð sé \
+                                           			eiginleiki sem unnt og/eða æskilegt sé að fjarlægja."
+
+#afhommun_kk										"Orðið 'afhommun' getur verið meiðandi þar sem það gefur í skyn \
+#													að samkynhneigð sé eiginleiki sem unnt og/eða æskilegt sé að fjarlægja."
+
+hjúkka_kvk				hjúkrunafræðingur_kk		"Orðið 'hjúkka' þykir ýta undir kynjaðar staðalmyndir og gefur í skyn \
+													að aðeins konur sinni starfinu."
+
+hjúkrunarkona_kvk		hjúkrunarfræðingur_kk		"Orðið 'hjúkrunarkona' þykir ýta undir kynjaðar staðalmyndir og gefur í skyn \
+													að aðeins konur sinni starfinu."
+
+skúringakerling_kvk		ræstitæknir_kk				"Orðið 'skúringakerling' þykir ýta undir kynjaðar staðalmyndir og gefur í \
+													skyn að aðeins konur sinni starfinu. Auk þess er orðið 'kerling' stundum \
+													notað í niðrandi merkingu um konur."
+
+skúringakona_kvk		ræstitæknir_kk				"Orðið 'skúringakona' þykir ýta undir kynjaðar staðalmyndir og gefur í \
+													skyn að aðeins konur sinni starfinu."
+
+fóstureyðing_kvk		þungunarrof_hk				"Orðið 'fóstureyðing' þykir gildishlaðið og er úrelt. Hlutlausara er að \
+													nota orðin 'þungunarrof' eða 'meðgöngurof'."
+
+Wuhan-veira_kvk			kórónuveira_kvk				"Orðið 'Wuhan-veira' er óviðeigandi þar sem það bendlar kórónaveiruna \
+													SARS-CoV-19 við tiltekinn stað og þjóð án þess að rök standi til þess."
+
+kynskiptingur_kk									"Orðið 'kynskiptingur' er gamalt og úrelt orð yfir trans konur og \
+													trans karla. Í dag er það talið niðrandi."
+
+kynskiptiaðgerð_kvk		kynleiðréttingaraðgerð_kvk	"Orðið 'kynskiptiaðgerð' er gamalt og úrelt orð yfir \
+													kynleiðréttingaraðgerðir trans fólks. Í dag er það talið niðrandi."
+
+kynvillingur_kk										"Orðið er gildishlaðið og úrelt hugtak sem notað var yfir hinsegin fólk. \
+													Það er niðrandi þar sem það gefur í skyn að gagnkynhneigð sé eina \
+													rétta eða eðlilega kynhneigðin."
+
+kynvilla_kvk 										"Orðið er gildishlaðið og úrelt hugtak sem notað var yfir \
+													samkynhneigt/hinsegin fólk. Það er niðrandi þar sem það gefur í skyn \
+													að gagnkynhneigð sé eina rétta eða eðlilega kynhneigðin."
+
+kynvilltur_lo										"Orðið er gildishlaðið og úrelt hugtak sem notað var um hinsegin fólk. \
+													Það er niðrandi þar sem það gefur í skyn að gagnkynhneigð sé eina \
+													rétta eða eðlilega kynhneigðin."
+
+eskimói_kk				inúíti_kk					"Orðið 'eskimói' er óviðeigandi heiti yfir frumbyggja Norður-Ameríku \
+													á Norðurslóðum. Það er niðrandi þar sem það er ekki það heiti sem \
+													þeir nota sjálfir um sig. Rétt heiti er 'inúíti'."
+
+skrælingi_kk			inúíti_kk					"Orðið er úrelt hugtak sem notað var í niðrandi merkingu yfir \
+													frumbyggja Norður-Ameríku á Norðurslóðum og vísaði í skinnfatnað þeirra. \
+													Rétt heiti er 'inúíti'."
+
+hottintotti_kk			blökkumaður_kk				"'Hottintotti' er úrelt og gildishlaðið orð sem er meiðandi gagnvart \
+													fólki sem er dökkt á hörund."
+
+múlatti_kk											"'Múlatti' er úrelt og gildishlaðið orð sem er meiðandi gagnvart \
+													fólki sem hefur annan hörundslit en hvítan."
+
+indjáni_kk											"Orðið er úrelt heiti yfir frumbyggja Norður-Ameríku. Það er meiðandi \
+													þar sem það er ekki það heiti sem þeir nota sjálfir um sig. Réttara er \
+													að nota orðið 'frumbyggi' eða nafn þess þjóðflokks sem einstaklingurinn \
+													tilheyrir."
+
+indíáni_kk											"Orðið er úrelt heiti yfir frumbyggja Norður-Ameríku. Það er meiðandi \
+													þar sem það er ekki það heiti sem þeir nota sjálfir um sig. Réttara er \
+													að nota orðið 'frumbyggi' eða nafn þess þjóðflokks sem einstaklingurinn \
+													tilheyrir."
+
+rauðskinni_kk										"Orðið er úrelt og niðrandi kynþáttaheiti yfir frumbyggja Norður-Ameríku \
+													sem vísar í húðlit þeirra."
+
+#Kínaveira_kvk										"Orðið 'Kínaveira' er óviðeigandi þar sem það bendlar kórónaveiruna \
+#													covid-19 við ákveðinn stað og þjóð. Það getur verið meiðandi og haft slæmar \
+#													afleiðingar gagnvart þjóðinni og fólki af svipuðum þjóðernum."
+
+sígauni_kk				rómafólk_hk					"Orðið er úrelt heiti yfir 'rómafólk'. Það er niðrandi þar sem það er ekki \
+													það heiti sem rómafólk notar um sjálft sig."
+
+hommatittur_kk										"Orðið 'hommatittur' er notað á niðrandi hátt um samkynhneigða karlmenn \
+													eða aðra karlmenn með vísan í að þeir séu samkynhneigðir."
+
+faggi_kk											"Orðið 'faggi' er dregið af enska orðinu 'faggot' og er notað á niðrandi \
+													hátt um samkynhneigða karlmenn eða aðra karlmenn með vísan í að þeir séu, \
+													hegði sér eins og eða líti út fyrir að vera samkynhneigðir."
+
+epalhommi_kk										"Orðið var upphaflega notað á niðrandi hátt um samkynhneigða karlmenn \
+													og byggir á þeirri staðalmynd að samkynhneigðir karlmenn hafi \
+													áhuga á hönnunarvörum og versli þ.a.l. í hönnunarbúðinni Epal."
+
+aftaníossi_kk										"Orðið er stundum notað í niðrandi merkingu yfir samkynhneigða karlmenn."
+
+#grjóni_kk											"Orðið 'grjóni' er stundum notað á niðrandi hátt yfir Asíubúa með vísan í \
+#													asíska matarmenningu."
+
+öfuguggi_kk											"Orðið 'öfuguggi' er stundum notað yfir samkynhneigða. Það er niðrandi þar \
+													sem það gefur í skyn að kynhneigð þeirra sé röng eða öfug við það sem er „rétt“."
+
+ókynhneigður_lo			eikynhneigður_lo			"Lýsingarorðið 'ókynhneigður' þykir bera með sér neikvæðan blæ vegna \
+													„ó“-forskeytisins. Betra er að nota orðið 'eikynhneigður'."
+
+#millikynja_lo			intersex_lo					"Orðið hefur verið notað um fólk sem fæðist með ódæmigerð kyneinkenni \
+#													en þykir niðrandi. Betra er að nota orðið 'intersex'."
+
+sódómskur_lo										"Orðið hefur verið notað um þá sem stunda kynmök með sama kyni, þá \
+													aðallega karla. Það er mjög niðrandi þar sem það gefur til kynna að \
+													um „ósiðlega“ hegðun sé að ræða."
+
+tvítóla_lo				intersex_lo					"Orðið hefur verið notað um fólk sem fæðist með ódæmigerð kyneinkenni \
+													og er niðrandi. Betra er að nota orðið 'intersex'."
+
+tvítóli_lo				intersex_lo					"Orðið hefur verið notað um fólk sem fæðist með ódæmigerð kyneinkenni \
+													og er niðrandi. Betra er að nota orðið 'intersex'."
+
+faggalegur_lo										"Lýsingarorðið 'faggalegur' er dregið af enska orðinu „faggot“ og er \
+													notað á niðrandi hátt um samkynhneigða karlmenn eða aðra karlmenn með \
+													vísan í að þeir séu, hegði sér eins og eða líti út fyrir að vera \
+													samkynhneigðir."
+
+#Gay_Pride_no			Pride_no					"Íslenska hátíðin sem áður hét 'Gay Pride' heitir í dag 'Pride' eða \
+#													'Hinsegindagar'. Upphaflega var hreyfingin að baki hátíðunum bundin \
+#													samkynhneigðum en eftir að tvíkynhneigðir og transfólk höfðu líka \
+#													haslað sér völl var heitið stytt til að útiloka engan."
+
+kynhverfur_lo			samkynhneigður_lo			"Orðið 'kynhverfa' var eitt af þeim orðum sem búin voru til af hinu \
+													opinbera til að lýsa samkynhneigð á níunda áratug 20. aldar. Það \
+													þykir gildishlaðið og er ekki hluti af þeim orðaforða sem hinsegin \
+													fólk kýs að nota um sig."
+
+hommalegur_lo										"Lýsingarorðið 'hommalegur' er oft notað á niðrandi hátt um samkynhneigða \
+													karlmenn eða aðra karlmenn með vísan í að þeir séu, hegði sér eins og eða \
+													líti út fyrir að vera samkynhneigðir."
+
+þrifakona_kvk			ræstitæknir_kk				"Orðið 'þrifakona' þykir ýta undir kynjaðar staðalmyndir og \
+													gefur í skyn að aðeins konur sinni þrifum."
+	
+
+fóstra_kvk											"Orðið þykir ýta undir kynjaðar staðalmyndir. Í dag þykir við hæfi að nota orðin \
+													'leikskólakennari/leikskólaliði/leikskólastarfsmaður'. Sum vilja þó enn nota \
+													starfsheitið 'fóstra', t.d. þau sem fóru í Fósturskóla Íslands."
+
+
+dagmamma_kvk			dagforeldri_hk				"Orðið þykir ýta undir kynjaðar staðalmyndir. Í dag þykir við hæfi að nota \
+													orðið 'dagforeldri'."
+
+nýbúi_kk				innflytjandi_kk				"'Nýbúi' er gildishlaðið og úrelt orð sem upprunalega átti að ná yfir alla þá \
+													sem flytja til nýs lands til að setjast þar að. Í dag takmarkast það þó við \
+													þá einstaklinga sem eru aðgreinanlegir hvítu fólki í útliti, t.d. fólk frá \
+													Asíu-, Afríku- eða miðausturlöndum, og er því ekki lengur viðeigandi."
+
+negratelpa_kvk										"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+													fólki sem er dökkt á hörund. Þar af leiðandi eru samsett orð sem innihalda 'negri'\
+													einnig óviðeigandi."
+
+negrakona_kvk										"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+													fólki sem er dökkt á hörund. Þar af leiðandi eru samsett orð sem innihalda 'negri'\
+													einnig óviðeigandi."
+
+negrakarl_kk										"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+													fólki sem er dökkt á hörund. Þar af leiðandi eru samsett orð sem innihalda 'negri'\
+													einnig óviðeigandi."
+
+negrakarlmaður_kk									"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+													fólki sem er dökkt á hörund. Þar af leiðandi eru samsett orð sem innihalda 'negri'\
+													einnig óviðeigandi."
+
+negrakóngur_kk										"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+													fólki sem er dökkt á hörund. Þar af leiðandi eru samsett orð sem innihalda 'negri'\
+													einnig óviðeigandi."
+
+negrakoss_kk										"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+													fólki sem er dökkt á hörund. Þar af leiðandi eru samsett orð sem innihalda 'negri'\
+													einnig óviðeigandi."
+
+negralist_kvk										"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+													fólki sem er dökkt á hörund. Þar af leiðandi eru samsett orð sem innihalda 'negri'\
+													einnig óviðeigandi."
+
+negramella_kvk										"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+													fólki sem er dökkt á hörund. Þar af leiðandi eru samsett orð sem innihalda 'negri'\
+													einnig óviðeigandi."
+
+negranögl_kvk										"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+													fólki sem er dökkt á hörund. Þar af leiðandi eru samsett orð sem innihalda 'negri'\
+													einnig óviðeigandi."
+
+negraríki_hk										"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+													fólki sem er dökkt á hörund. Þar af leiðandi eru samsett orð sem innihalda 'negri'\
+													einnig óviðeigandi."
+
+negrasálmur_kk										"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+													fólki sem er dökkt á hörund. Þar af leiðandi eru samsett orð sem innihalda 'negri'\
+													einnig óviðeigandi."
+
+negrasöngvari_kk									"Orðið 'negri' er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+													fólki sem er dökkt á hörund. Þar af leiðandi eru samsett orð sem innihalda 'negri'\
+													einnig óviðeigandi."
