--- a/src/reynir_correct/config/TabooWords.conf
+++ b/src/reynir_correct/config/TabooWords.conf
@@ -1485,22 +1485,28 @@ trúvillingur_kk
 
 villutrúarmaður_kk		
 
-bæjari_kk											"Orðið er stundum notað yfir þann sem er tvíkynhneigður. Það þykir \ 													niðrandi og því betra að tala um 'tvíkynhneigð' eða 'tvíkynhneigða' \ 													 	einstaklinga."
+bæjari_kk											"Orðið er stundum notað yfir þann sem er tvíkynhneigður. Það þykir \
+													niðrandi og því betra að tala um 'tvíkynhneigð' eða 'tvíkynhneigða' \
+													einstaklinga."
 
-faggalegt_lo										"Lýsingarorðið 'faggalegur' er dregið af enska orðinu 'faggot' og \
-													er notað á niðrandi hátt um samkynhneigða karlmenn eða aðra karlmenn \ með vísan í að þeir séu, hegði sér eins og eða líti út fyrir að vera \ samkynhneigðir."
+faggalegur_lo										"Lýsingarorðið 'faggalegur' er dregið af enska orðinu 'faggot' og \
+													er notað á niðrandi hátt um samkynhneigða karlmenn eða aðra karlmenn \
+													með vísan í að þeir séu, hegði sér eins og eða líti út fyrir að vera \
+													samkynhneigðir."
 
 hommadjöfull_kk		
 
 hommahækja_kvk		
 
-hommalegt_lo										"Lýsingarorðið 'hommalegur' er oft notað á niðrandi hátt um \ 
-													samkynhneigða karlmenn eða aðra karlmenn með vísan í að þeir séu,\ hegði sér eins og eða líti út fyrir að vera samkynhneigðir."
+hommalegt_lo										"Lýsingarorðið 'hommalegur' er oft notað á niðrandi hátt um \
+													samkynhneigða karlmenn eða aðra karlmenn með vísan í að þeir séu, \
+													hegði sér eins og eða líti út fyrir að vera samkynhneigðir."
 
 hommaorgía_kvk		
 
-hommi_kk											"Orðið 'hommi' er stundum notað í niðrandi merkingu um karlmenn. \ 
-													Þegar samkynhneigðir karlmenn nota það um sig er það hins vegar ekki \ óviðeigandi."
+hommi_kk											"Orðið 'hommi' er stundum notað í niðrandi merkingu um karlmenn. \
+													Þegar samkynhneigðir karlmenn nota það um sig er það hins vegar ekki \
+													óviðeigandi."
 
 lessuklám_hk		
 
