--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,17 @@ coverage.xml
 # Measurement results
 eval*.out
 test*.out
+eval/results/
+
+# Extra test files
+test/extras/
+test/spantest.py
+
+# Error analysis
+eval/examples_iEC/
+
+# Various resource files
+src/reynir_correct/resources/
 
 # Symlink to iceErrorCorpus for evaluation
 eval/iceErrorCorpus
