added header to config file

--- a/src/reynir_correct/config/TabooWords.conf
+++ b/src/reynir_correct/config/TabooWords.conf
@@ -1,3 +1,21 @@
+
+# TabooWords.conf
+
+# A list of taboo or inappropriate words that GreynirCorrect should flag
+
+# This file is included in GreynirCorrect.conf
+
+# The format is as follows, in whitespace-separated columns within each line:
+
+# 1) Taboo word + '_' + category
+# 2) Optional replacement word + '_' + category.
+#    There can be multiple replacement words,
+#    separated by tight forward slashes '/'.
+# 3) Optional explanatory comment, enclosed in double quotes.
+
+# Note that lines can be continued by ending them with a backslash '\',
+# which is especially useful for long explanatory comments.
+
 tilli_kk				limur_kk
 lessa_kvk				lesbía_kvk
 
