error spans fixed; capitalized tokens no longer marked as unknown word errors; vera_að() fixed

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -3669,7 +3669,7 @@ Heimsveldi
 Bylting
 Uppreisn
 meistaradeild
-Kreppa
+# Kreppa  # Maybe 'Kreppan' but not general 'kreppa'!
 Endurreisn
 Jörð
 Tungl
