fixes according to comments

--- a/src/reynir_correct/config/TabooWords.conf
+++ b/src/reynir_correct/config/TabooWords.conf
@@ -401,22 +401,18 @@ tíkartittur_kk
 
 arabatrú_kvk		
 
-trúvilla_kvk									"Orðið 'villutrú' er ekki viðeigandi þar sem það gefur til kynna að einhver ein trú \
+trúvilla_kvk									"Orðið 'trúvilla' er ekki viðeigandi þar sem það gefur til kynna að einhver ein trú \
 												sé hin eina rétta."
 
 trúvillingur_kk									"Orðið 'trúvillingur' er óviðeigandi þar sem það gefur til kynna að einhver ein trú \
-												sé hin eina rétta og að sá sem aðhyllist aðrar trúr fari þá gegn því sem rétt er."
+												sé hin eina rétta og að sá sem aðhyllist aðra trú fari þá gegn því sem rétt er."
 
 villutrúarmaður_kk								"Orðið 'villutrúarmaður' er óviðeigandi þar sem það gefur til kynna að einhver ein trú \
-												sé hin eina rétta og að sá sem aðhyllist aðrar trúr fari þá gegn því sem rétt er."
+												sé hin eina rétta og að sá sem aðhyllist aðra trú fari þá gegn því sem rétt er."
 
 hommadjöfull_kk		
 
 hommahækja_kvk		
-
-hommalegt_lo									"Lýsingarorðið 'hommalegur' er oft notað á niðrandi hátt um samkynhneigða karlmenn \
-												eða aðra karlmenn með vísan í að þeir séu, hegði sér eins og eða líti út fyrir að \
-												vera samkynhneigðir."
 
 hommi_kk										"Orðið 'hommi' er stundum notað í niðrandi merkingu um karlmenn. Þegar samkynhneigðir \
 												karlmenn nota það um sig er það hins vegar ekki óviðeigandi."
@@ -493,9 +489,7 @@ negrabani_kk
 
 negrabrandari_kk		
 
-siðleysingi_kk		
-
-svertingjabrandari_kk		
+siðleysingi_kk				
 
 svertingjafingur_kk		
 
