--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -3909,7 +3909,7 @@ arabía
 arabi
 Arabískur
 Arabíska
-mið-arabía
+# mið-arabía  # Ekki í BÍN
 filippseyjar
 filippseyingur
 Filippseyskur
@@ -4005,7 +4005,7 @@ Mongólskur
 indónesía
 indónesi
 Indónesískur
-Indónesíska
+# Indónesíska  # Not in BÍN
 kórea
 kóreumaður
 Kóreskur
@@ -4055,7 +4055,7 @@ fríslendingur
 Frísneskur
 ameríka
 Amerískur
-Afrísk-amerískur
+#Afrísk-amerískur  # Not in BÍN
 líbía
 Líbískur
 karíbahaf
