--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -269,6 +269,8 @@
 "Babýlóns", "Babýlons"
 "Báður", "Bárður"
 "bæjarsins", "bæjarins"
+"bæji", "bæi"
+"bæjir", "bæir"
 "bæum", "bæjum"
 "bakarínu", "bakaríinu"
 "Bakary", "Bakery"
@@ -387,19 +389,17 @@
 "búrkíníum", "búrkiníum"
 "búrmísk", "mjanmörsk"
 "búrmíska", "mjanmarska"
-"búrmískri", "mjanmarskri"
-"búrmískrar", "mjanmarskrar"
-"búrmíski", "mjanmarski"
-"búrmísku", "mjanmörsku"
-"búrmískur", "mjanmarskur"
 "búrmískan", "mjanmarskan"
-"búrmískum", "mjanmörskum"
+"búrmíski", "mjanmarski"
+"búrmískrar", "mjanmarskrar"
+"búrmískri", "mjanmarskri"
 "búrmísks", "mjanmarsks"
+"búrmísku", "mjanmörsku"
+"búrmískum", "mjanmörskum"
+"búrmískur", "mjanmarskur"
 "Búsáhaldabyltingi", "Búsáhaldabyltingin"
 "Byrkir", "Birkir"
 "byrunarliðinu", "byrjunarliðinu"
-"bæjir", "bæir"
-"bæji", "bæi"
 "ðað", "að"
 "dæmsi", "dæmis"
 "dagins", "dagsins"
@@ -2730,35 +2730,38 @@
 
 # Set of word forms that are allowed to appear consecutively in text
 
-af
-auður
+á
 að
+af
+átta
+auður
+bæði
 bannið
 bara
-bæði
 efni
 eftir
 eigi
 eigum
 eins
 er
+fá
 falla
 fallið
 ferð
 festi
 finnur
-flokkar
 flæði
+flokkar
 formið
+frá
 fram
 framan
-frá
 fylgi
 fyrir
-fá
 gegn
 gerði
 getum
+hæli
 hafa
 hafi
 hafið
@@ -2775,52 +2778,59 @@ hjólum
 hlaupið
 hrætt
 hvort
-hæli
+í
 inn
 inni
+kæra
 kanna
 kaupa
 kemba
 kira
 koma
-kæra
+lækna
 lagi
 lagið
+leið
 leik
 leikur
-leið
 liðið
-lækna
 lögum
 löngu
+málið
 manni
 með
 metið
 milli
 minnst
+mörkum
+móti
 mun
 myndir
-málið
-móti
-mörkum
+næst
 neðan
 niðri
 niður
-næst
+ó
 ofan
+ómar
 opnir
 orðin
+ráðum
 rennur
+rétt
 reynir
 riðlar
 riðli
-ráðum
-rétt
+sæti
 safnið
+sé
 sem
+sér
 sett
+síðan
 skipið
 skráðir
+sótt
 spenna
 standa
 stofna
@@ -2828,11 +2838,6 @@ streymi
 strokið
 stundum
 svala
-sæti
-sé
-sér
-síðan
-sótt
 sýna
 talið
 til
@@ -2841,33 +2846,28 @@ um
 undan
 undir
 upp
+úr
+út
+úti
+væri
 valda
 vanda
 var
+veður
 vega
 veikir
 vel
 velta
 vera
-verið
-vernda
 verða
 verði
 verður
-veður
-vikum
+verið
+vernda
 við
-væri
+vikum
 yfir
 yrði
-á
-átta
-í
-ó
-ómar
-úr
-út
-úti
 þegar
 þjóna
 
@@ -3654,12 +3654,13 @@ Múslími
 Múslimi
 Sjíti
 Súnníti
-evrópa
 sjálfstæðismaður
 samfylkingarmaður
 framsóknarmaður
 miðflokksmaður
 pírati
+repúblikani
+demókrati
 Lenínismi
 Marxismi
 Darwinismi
@@ -3668,14 +3669,17 @@ Stríð 			# Kalda Stríðið
 Heimsveldi
 Bylting
 Uppreisn
-meistaradeild
+Meistaradeild
 Kreppa
 Endurreisn
 Jörð
 Tungl
-vesturlönd
-norðurlönd
 óskarsverðlaun 	#ekki leiðrétt, fer í 'if all(m.stofn not in stems for m in meanings)' en meanings = []
+internet
+litla-hraun
+ólympíuleikar
+sumarólympíuleikar
+vetrarólympíuleikar
 
 # Holidays
 # Unnecessary to include: föstudagurinn langi
@@ -3764,6 +3768,7 @@ Prófessor
 # Ríkislögreglustjóri
 Alþingismaður
 Alþingiskona
+alþingi
 Heimsmeistari
 
 # Weekdays
@@ -3800,6 +3805,7 @@ Viðskiptafræði
 # Committees, departments, etc.
 
 Skemmtinefnd
+þingvallanefnd
 Öryggisráð
 Sambandsráð
 Ráðherraráð
@@ -3814,7 +3820,6 @@ Fulltrúaþing
 Sambandslög
 Heimsmeistaramót
 Grunnskóli
-Höfuðborgarsvæði
 
 # !!! TODO: Expand following list of countries and related adjectives
 
@@ -3846,6 +3851,9 @@ rússland
 rússi
 Rússneskur
 Rússneska
+prússland
+prússi
+Prússneskur
 færeyjar
 færeyingur
 Færeyskur
@@ -3880,12 +3888,9 @@ lettland
 letti
 Lettneskur
 Lettneska
-litháen
-lithái
-Litháenskur
-Litháenska
-Litháískur   # Error, should be litháenskur
-Litháíska
+litáen
+litái
+Litáískur
 kanada
 kanadamaður
 Kanadískur
@@ -3893,6 +3898,9 @@ spánn
 spánverji
 Spænskur
 Spænska
+baskaland
+baski
+Baskneskur
 japan
 japani
 Japanskur
@@ -3901,6 +3909,7 @@ arabía
 arabi
 Arabískur
 Arabíska
+# mið-arabía  # Ekki í BÍN
 filippseyjar
 filippseyingur
 Filippseyskur
@@ -3964,6 +3973,9 @@ slóvakía
 slóvaki
 Slóvakískur
 Slóvakíska
+líbanon
+líbani
+Líbanskur
 mexíkó
 mexíkói
 Mexíkóskur
@@ -3975,7 +3987,7 @@ brasilíumaður
 Brasilískur
 indland
 indverji
-# Indverska
+Indverskur
 taíland
 taílendingur
 Taílenskur
@@ -3993,23 +4005,24 @@ Mongólskur
 indónesía
 indónesi
 Indónesískur
-# Indónesíska
+# Indónesíska  # Not in BÍN
 kórea
 kóreumaður
 Kóreskur
 Kóreska
-norður-kórea 		#verður að Norður-kórea
-norður-kóreumaður	#verður að Norður-kóreumaður
+norður-kórea 	
+norður-kóreumaður
 Norðurkóreskur
-suður-kórea 		#verður að Suður-kórea
-suður-kóreumaður	#ekki leiðrétt - fellur undir 'if all(m.stofn not in stems for m in meanings)' því orðið finnst ekki í meanings
+suður-kórea 
+suður-kóreumaður
 Suðurkóreskur
-nýja-sjáland 		#ekki leiðrétt - fellur undir 'if lower and any(m.ordfl not in {"kk", "kvk", "hk"} for m in tval)' því BÍN segir að þetta geti líka verið sögn?
+nýja-sjáland
 nýsjálendingur
 Nýsjálenskur
-suður-afríka 		#verður að Suður-afríka
-suður-afríkumaður 	#verður að Suður-afríkumaður
+suður-afríka
+suður-afríkumaður
 Suðurafrískur
+mið-austurlönd
 kasakstan
 kasaki
 Kasakskur
@@ -4026,10 +4039,55 @@ Germanska
 sýrland
 sýrlendingur
 Sýrlenskur
+túnis
+túnisi
+Túniskur
 Íslamskur
+tamíli
+Tamílskur
+mári
+Márískur
+bantúi
+inúíti
+normanni
+frísland
+fríslendingur
+Frísneskur
 ameríka
 Amerískur
-# Afrísk-amerískur
+#Afrísk-amerískur  # Not in BÍN
+líbía
+Líbískur
+karíbahaf
+#karíbi 	# Not in BÍN
+#Karíbskur 	# Not in BÍN
+Karabískur
+evrópa
+evrópubúi
+Evrópskur
+austur-evrópa
+#austur-evrópubúi 	# Not corrected, not in BÍN
+Austurevrópskur
+vestur-evrópa
+#vestur-evrópubúi 	# Not corrected, not in BÍN
+Vesturevrópskur
+norður-evrópa
+suður-evrópa
+mið-evrópa
+asía
+asíubúi
+Asískur
+suður-asía
+austur-asía
+suðaustur-asía
+afríka
+afríkubúi
+Afrískur
+vesturlönd
+vesturlandabúi
+norðurlönd
+norðurlandabúi
+norðurlandaþjóð
 
 austfirðir
 austurland
@@ -4041,12 +4099,14 @@ suðvesturland
 suðurland
 suðurnes
 vestfirðir
+vestfjarðakjálki
 vesturland
 norðlendingur
 austfirðingur
 sunnlendingur
 suðurnesjamaður
 vestfirðingur
+mývetningur
 
 norðvesturkjördæmi
 norðausturkjördæmi
@@ -4055,13 +4115,38 @@ suðvesturkjördæmi
 reykjavíkurkjördæmi
 
 # Language families
-# Unable to include: afróasískur, aímarískur, algískur, altískur, ástró-asískur,
-# ástronesískur, dravidískur, dravídamál, eskimó-aleútískur, karíbamál, nígerkongómál,
-# nílósaharamál, sinó-tíbetskur, suðurkákasískur, túpímál
+# Unable to include: aímarískur, algískur, ástronesískur, dravidískur, suðurkákasískur
 
 Indóevrópskur
 Semískur
 Úralskur
+Afróasískur 
+Altískur 
+Ástró-Asískur
+Dravídamál
+Suðurkákasískur
+
+# Place names
+
+laugavegur
+breiðholt
+efra-breiðholt
+neðra-breiðholt
+laugardalur
+kópavogur
+hafnarfjörður
+garðabær
+seltjarnarnes
+mosfellsbær
+árbær
+grafarvogur
+grafarholt
+Höfuðborgarsvæði
+þingvellir
+keflavík
+elliðaár
+vatnsmýri
+golfstraumur
 
 # Context-free lower-case (ritregla 1.3.3.2)
 
@@ -4195,7 +4280,7 @@ Vínarterta
 # Medical terms
 Akureyrarveiki
 Alzheimers
-# Alzheimers-sjúkdómur
+Alzheimers-Sjúkdómur
 Asíuflensa
 Downs
 # Downs-heilkenni
@@ -4258,7 +4343,6 @@ Evuklæði
 Gordíonshnútur
 Grettistak
 Gróusaga
-# Gvendarbrunnur  # !!! Þetta hlýtur að teljast örnefni, og er merkt þannig í BÍN?
 Hrunadans
 Kaupahéðinn
 Kínaskór
@@ -4291,7 +4375,6 @@ Hamingja
 # Imam
 # Indie
 Indíáni
-Internet
 Kaldur
 Karate
 Kaþólskur
@@ -4301,10 +4384,9 @@ Landsfundur
 Landsþing
 Leiðtogi
 Ljósmóðir
-Líbýskur
 Lóuþræll
 Löggjafarvald
-Lögregla
+#Lögregla 		# Uppercase when it applies to the institution
 Lútherstrú
 Lýðveldi
 Markaðsstjóri
